# standard-data-management-framework

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/: release-drafter.yml
.github/workflows/: changelog-check.yml  release-drafter.yml  release.yml
documentation/: bronze_feed_specs.md
documentation/IngestionSpecs/: dtypes.txt  parquet.md  simple_get_request.json  storage_fetch_xml.json  storage_fetch_xml_group.json  storage_fetch_xml_medallion_group.json
documentation/prod_specs/: country_codes.json  country_codes_raw.json  iso_language_codes.json  iso_language_codes_raw.json
files/: master_specs.xlsx
files_dev/: cluster.sh  config.ini  master_specs.xlsx
files_prod/: config.ini  master_specs.xlsx
src/sdmf/: __init__.py
src/sdmf/cli/: main.py  main2.py  tt.py
src/sdmf/config/: LoggingConfig.py  LoggingPrettyFormatter.py
src/sdmf/core/: BasePipelineException.py  KeyVaultSecretFetchError.py
src/sdmf/data_flow_diagram_generator/: DataFlowDiagramGenerator.py
src/sdmf/data_loader/: BaseDataLoader.py
src/sdmf/data_movement_framework/: BaseExtractor.py  BaseLoadStrategy.py  DataLoadController.py  LoadDispatcher.py
src/sdmf/data_movement_framework/data_class/: LoadConfig.py  LoadResult.py
src/sdmf/data_movement_framework/load_types/: APIExtractor.py  APIExtractorJSON.py  AppendLoad.py  FullLoad.py  IncrementalCDC.py  SCDType2.py  StorageFetch.py
src/sdmf/data_quality/: BaseDataQualityCheck.py  DQResult.py  FeedSpec.py  StandardDataQualityChecks.py
src/sdmf/data_quality/executors/: ComprehensiveDQExecutor.py  StandardDQExecutor.py
src/sdmf/data_quality/model/: FeedDQSummaryRow.py
src/sdmf/data_quality/report/: DQExcelReportWriter.py
src/sdmf/data_quality/runner/: FeedDataQualityRunner.py
src/sdmf/exception/: BaseException.py  BasePipelineException.py  DataLoadException.py  DataQualityError.py  DataQualityException.py  DataSpecRuleExecutionError.py  DataSpecValidationError.py  EnvironmentPreparationError.py  ExtractionException.py  FeedSpecValidationError.py  KeyVaultSecretFetchError.py  ResultGenerationException.py  StorageFetchException.py  SystemError.py  ValidationError.py
src/sdmf/extraction_toolkit/: BaseExtractor.py  ExtractionController.py
src/sdmf/extraction_toolkit/components/: APIExtractor.py
src/sdmf/extraction_toolkit/data_class/: ExtractionConfig.py  ExtractionResult.py
src/sdmf/integrity/: Environment.py
src/sdmf/mixins/: MetadataMixin.py
src/sdmf/orchestrator/: Orchestrator.py
src/sdmf/result_generator/: ResultGenerator.py
src/sdmf/system_restore/: SystemRestore.py
src/sdmf/validation/: FeedSpecValidation.py  SystemLaunchValidator.py  ValidateBronze.py  ValidateGold.py  ValidateSilver.py  ValidateSource.py  ValidationContext.py  ValidationResult.py  ValidationRule.py  Validator.py
src/sdmf/validation/old/: FeedSpecValidation.py  ValidateDataSpecsBase.py
src/sdmf/validation/validation_rules/: CheckStructureCheck.py  ColumnExistsInSelection.py  CompositeKeysCheck.py  DependencyDatasetCheck.py  (+12 more)
tests/: bronze_feed_specs.json  feed_specs.json  fs2.json  ingestion.json  opt.xlsx  sparktest.ipynb  test.ipynb
