[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdmf"
version = "0.1.1"
description = "SDMF - Standard Data Management Framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Harsh Handoo", email = "handoo.harsh@gmail.com" }
]

dependencies = [
  "pandas",
  "openpyxl"
]

[tool.setuptools.packages.find]
where = ["src"]