[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdmf"
version = "0.1.6"
description = "SDMF - Standard Data Management Framework"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Harsh Handoo", email = "handoo.harsh@gmail.com" }
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

dependencies = [
  "pandas",
  "openpyxl",
  "matplotlib"
]

[project.urls]
License = "https://github.com/yalsworldofficial/standard-data-management-framework/blob/main/LICENSE"

[tool.setuptools.packages.find]
where = ["src"]
