[metadata]
name = sdmf
description = Standard Data Management Framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Harsh Hando
license = Apache-2.0
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pyspark>=3.4
    delta-spark

[options.packages.find]
where = src
